# rtaa-classifier

./: .dockerignore  .env.development  .env.template  .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
conf/: account_classifier.json  comment_classifier.json
models/: account_catboost_classifier_twitter_v1-no_digits.model
notebooks/: twitter-accounts-catboost-classifier.ipynb
notebooks/data/: model.csv
server/: app.py  client.py  test_server.py
server/config/: config.py
server/grpcserver/: server.py
server/internal/cvcio/classification/: accounts_pb2.py  accounts_pb2_grpc.py  comments_pb2.py  comments_pb2_grpc.py
server/internal/cvcio/common/: meta_pb2.py  predictions_pb2.py
server/internal/google/api/: annotations_pb2.py
server/internal/tagger/: tagger_pb2.py
server/proto/rtaa/classification/accounts/v1/: accounts_pb2.py  accounts_pb2_grpc.py
server/proto/rtaa/classification/comments/v1/: comments_pb2.py  comments_pb2_grpc.py
server/proto/rtaa/classification/common/v1/: meta_pb2.py  predictions_pb2.py
server/services/: accounts.py  comments.py  service.py
server/utils/: calculations.py  helper.py  strings.py
tests/: test_server.py
